Add html endpoints. Add Controllers for admin and user endpoints

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -3,9 +3,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>Admin</title>
 </head>
 <body>
-You are logged in!
+You are logged in as admin
 </body>
 </html>
