--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -3,9 +3,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>User</title>
 </head>
 <body>
-You are logged in!
+You are logged in as a User.
 </body>
 </html>
