Fix addUser method.

--- a/src/main/resources/templates/registeruser.html
+++ b/src/main/resources/templates/registeruser.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Register User</title>
 </head>
 <body>
 <form th:action="@{/addUser}" th:object="${appUser}" method="post">
